@@ -43,5 +43,6 @@ wubi (8.10) UNRELEASED; urgency=low
   * Added new installation tasks
   * Added menu.lst generation
   * Added winboot dir (pre-compiled)
+  * Copy custom-installation files to targetdir
 
- -- Agostino Russo <agostino.russo@gmail.com>  Tue, 09 Sep 2008 01:24:26 +0100
+ -- Agostino Russo <agostino.russo@gmail.com>  Tue, 09 Sep 2008 08:51:32 +0100
